--- a/src/app.html
+++ b/src/app.html
@@ -17,9 +17,10 @@
 			padding: 0;
 			margin: 0;
 			font-family: Arial, Helvetica, sans-serif;
-			background-color: blue;
 		}
 		.container {
+			max-height: 100vh;
+			overflow-y: hidden;
 			display: grid;
 			grid-template-columns: 6vw 1fr 1fr 1fr;
 			grid-template-rows: 10vh 1fr 1fr 1fr;
